app/assets/scss/_lists.scss
.list-horizontal {
  .tags {
    a {
      display: inline-block;
      line-height: 1.4;
      @include media($tablet) {
        display: inline;
        line-height: 2.1;
      }
    }
  }
}

.home {
  h2 {
    font-size: rem(24);
    margin-bottom: $small-spacing;

    &:first-of-type {
     @include media($tablet) {
       margin-top: 0;    
     }
   }
 }

  .list-vertical {

    &:last-of-type {
      margin-bottom: 0;
    }

    > li {
      border-width: 0;

      @include media($tablet) {   
        flex-basis: 40%;    
      }

      p {
        min-height: auto;
      }

    }

    .list-horizontal {

      li {
        border-width: 0;
        border-left: solid 1px $border-colour;
        margin-left: 0;
        padding-left: $base-spacing;

        h3 {
          min-height: auto;
        }

        a {
          padding-right: 0;
        }
      }

    }
  }

  .sub {
    li {
      border-left: solid 1px $border-colour;
      margin-left: 0;
      padding-left: $base-spacing;
    }
    h3 {
      min-height: auto;
    }
  }

}

.content-details {
  .list-horizontal {
    margin: 0;
    .tags {
      a {
        &.disabled {
          border-color: $light-grey;
          color: $black;
          cursor: default;
          pointer-events: none;
        }
      }
    }

    li {
      article {
        width: 100%;
      }
    }
  }
}

.brief-result {

  ul {
    margin: 0;
    padding: 0;
  }
  
  li {
    display: inline-block;
    margin: 0;
    padding: 0;
  }

  .organisation {
    @extend h3;
    margin: 0;
    padding: $small-spacing*1.5 0 $small-spacing;
    
    li:not(:last-child) {
      margin-right: $medium-spacing;
    }
  }

  .category {
    color: $grey;
    font-size: $small-font-size;
  }

  .status {
    color: $grey;
    font-size: $small-font-size;
    margin: $tiny-spacing 0 $small-spacing*1.5;

    li:not(:last-child) {
      margin-right: $medium-spacing;
    }
  }

}

.go-back {
  color: $black;
  display: inline-block;
  position: relative;
  padding-left: $base-spacing/2;
  font-weight: $heading-font-weight;
  border-bottom: 1px solid transparent;

  &:link,
  &:visited,
  &:active {
    color: $black;
  }

  &::before {
    @extend %icon-arrow-left--black;

    content: '';
    position: absolute;
    display: block;
    width: $medium-spacing;
    height: $medium-spacing;
    top: 0;
    left: 0;
    background-repeat: no-repeat;
    background-position: left $tiny-spacing;
    background-size: (0.8 * $small-spacing) auto;
    border-bottom: none;
  }

  &:hover,
  &:focus {
    border-bottom: 1px solid;
  }
}

